tests/specs/permission/path_not_permitted/main.out
Running...
error: Uncaught (in promise) PermissionDenied: Requires run access to "[WILDLINE]deno", run again with the --allow-run flag
).outputSync();
  ^
    at [WILDCARD]
    at file:///[WILDLINE]sub.ts:14:3
